--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -324,15 +324,15 @@
 
             <p>
                 If <b>Person B</b> removes <b>1 point</b> from <b>Person A</b> in Stage 2,
-                <b>what would be the effect?</b>
+                <b>what happens?</b>
             </p>
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-comprehension2PP">
-                    <div class="comprehension-option" data-value="0" >Person A would lose 3 point(s) and Person C would lose 0.33 point(s).</div>
-                    <div class="comprehension-option" data-value="1" >Person A would lose 3 point(s) and Person C would lose 1 point(s).</div>
-                    <div class="comprehension-option" data-value="2" >Person A would lose 1 point(s) and Person C would lose 0.33 point(s).</div>
-                    <div class="comprehension-option" data-value="3" >Person A would lose 1 point(s) and Person C would lose 1 point(s).</div>
+                    <div class="comprehension-option" data-value="0" >Person A loses 3 points and Person B loses 0.33 points.</div>
+                    <div class="comprehension-option" data-value="1" >Person A loses 3 points and Person B loses 1 point.</div>
+                    <div class="comprehension-option" data-value="2" >Person A loses 1 point and Person B loses 0.33 points.</div>
+                    <div class="comprehension-option" data-value="3" >Person A loses 1 point and Person B loses 1 point.</div>
                 </div>
             </div>
 
@@ -347,15 +347,15 @@
 
             <p>
                 If <b>Person C</b> gives <b>3 point(s)</b> to <b>Person A</b> in Stage 2,
-                <b>what would be the effect?</b>
+                <b>what happens?</b>
             </p>
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-comprehension3PR">
-                    <div class="comprehension-option" data-value="0" >Person A would gain 1 point(s) and Person C would lose 0.33 point(s). </div>
-                    <div class="comprehension-option" data-value="1" >Person A would gain 1 point(s) and Person C would lose 1 point(s).</div>
-                    <div class="comprehension-option" data-value="2" >Person A would gain 3 point(s) and Person C would lose 0.33 point(s).</div>
-                    <div class="comprehension-option" data-value="3" >Person A would gain 3 point(s) and Person C would lose 1 point(s).</div>
+                    <div class="comprehension-option" data-value="0" >Person A gains 1 point and Person C loses 0.33 points. </div>
+                    <div class="comprehension-option" data-value="1" >Person A gains 1 point and Person C loses 1 point.</div>
+                    <div class="comprehension-option" data-value="2" >Person A gains 3 points and Person C loses 0.33 points.</div>
+                    <div class="comprehension-option" data-value="3" >Person A gains 3 points and Person C loses 1 point.</div>
                 </div>
             </div>
 
@@ -370,15 +370,15 @@
 
             <p>
                 If <b>Person C</b> gives <b>3 point(s)</b> to <b>Person B</b> in Stage 2,
-                <b>what would be the effect?</b>
+                <b>what happens?</b>
             </p>
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-comprehension3PC">
-                    <div class="comprehension-option" data-value="0" >Person A would lose 0 point(s), Person B would gain 3 points and Person C would lose 1 point(s). </div>
-                    <div class="comprehension-option" data-value="1" >Person A would lose 0 point(s), Person B would lose 3 points and Person C would lose 0.33 point(s).</div>
-                    <div class="comprehension-option" data-value="2" >Person A would lose 3 point(s), Person B would lose 3 points and Person C would lose 0.33 point(s).</div>
-                    <div class="comprehension-option" data-value="3" >Person A would lose 3 point(s), Person B would gain 3 points and Person C would lose 1 point(s).</div>
+                    <div class="comprehension-option" data-value="0" >Person A loses 0 points, Person B gains 3 points and Person C lose 1 point. </div>
+                    <div class="comprehension-option" data-value="1" >Person A loses 0 points, Person B loses 3 points and Person C lose 0.33 points.</div>
+                    <div class="comprehension-option" data-value="2" >Person A loses 3 points, Person B loses 3 points and Person C lose 0.33 points.</div>
+                    <div class="comprehension-option" data-value="3" >Person A loses 3 points, Person B gains 3 points and Person C lose 1 point.</div>
                 </div>
             </div>
 
