--- a/baseline_trials/Reminder.html
+++ b/baseline_trials/Reminder.html
@@ -32,8 +32,7 @@
                 </p>
                 <p>
                     Person C receives 4 points in Stage 2 and can use these points to give points to Person A.
-                    Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b>
-                    (cost of giving 1 point: 0.33 points).
+                    For each <b>1 point</b> that Person C gives to Person A, Person C loses <b>0.33 points</b>.
                 </p>
             </div>
 
@@ -50,8 +49,7 @@
                     Person A and Person B both receive 4 points in Stage 2.
                     Only Person B can use these points to remove points from Person A.
                     Removed points are eliminated and cannot be used by anyone.
-                    Removing <b>3 points</b> from Person A will cost Person B <b>1 point</b>
-                    (cost of removing 1 point = 0.33 points).
+                    For each <b>1 point</b> that Person B removes from Person A, Person B loses <b>0.33 points</b>.
                 </p>
             </div>
         {% endif %}
@@ -64,8 +62,7 @@
                 <p>
                     Person C receives 4 points in Stage 2 and can use these points to remove points.
                     Removed points are eliminated and cannot be used by anyone.
-                    Removing <b>3 points</b> from Person A will cost Person C <b>1 point</b>
-                    (cost of removing 1 point: 0.33 points).</p>
+                    For each <b>1 point</b> that Person C removes from Person A, Person C loses <b>0.33 points</b>.
             </div>
         {% endif %}
 
@@ -77,8 +74,7 @@
                 <p>
                     Person C receives 4 points in Stage 2 and can use these points to give points to Person A.
                     Only Person C can use these points to give points to Person A.
-                    Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b>
-                    (cost of giving 1 point = 0.33 points).
+                    For each <b>1 point</b> that Person C gives to Person A, Person C loses <b>0.33 points</b>.
                 </p>
             </div>
         {% endif %}
@@ -92,8 +88,8 @@
                 <p>
                     Person C receives 4 points in Stage 2 and can use these points to remove or give points.
                     Removed points are eliminated and cannot be used by anyone.
-                    Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b>
-                    (cost of removing OR giving 1 point = 0.33 points).
+                    For each <b>1 point</b> that Person C removes from Person A, Person C loses <b>0.33 points</b>.
+                    For each <b>1 point</b> that Person C gives to Person B, Person C loses <b>0.33 points</b>.
                 </p>
             </div>
         {% endif %}
