--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1062,15 +1062,18 @@
         {% if "norm" in player.treatment %}
 
         {% if "2PP" in player.treatment and player.round_number < 6 %}
-            <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person B is.</b> <br> <br>
-            <p style="font-size: 14px; ">
-                Importantly, you will receive an <b>extra bonus of {{ C.ratings_extra_points }}</b> if your decisions are the same as the most
+            <p style="text-align: center;">
+                <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person B is.</b> <br> <br>
+
+                Importantly, you will receive an <b>extra bonus of {{ C.ratings_extra_points }} points</b> if your decisions are the same as the most
                 common decisions among all other participants in {{current_country}}. <br> <br>
             </p>
         {% endif %}
 
         {% if "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
-            <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person C is.</b> <br> <br>
+            <p style="text-align: center;">
+                <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person C is.</b> <br> <br>
+            </p>
         {% endif %}
 
         {% for TP_norm_decision in TP_norm_decisions %}
@@ -1158,24 +1161,24 @@
             </div>
 
             {% if "IN" in player.treatment or "OUT" in player.treatment%}
-                <p style="font-size: 14px;">
+                <p style="text-align: center;">
                     Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>.
                 </p>
             {% endif %}
 
             {% if "country" in player.treatment %}
-                <p style="font-size: 14px;">
+                <p style="text-align: center;">
                     Person A lives in <b style="color: red; ">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red; ">{{ recip_identity_country }}</b>.
                 </p>
             {% endif %}
 
 
-            <p style="font-size: 14px;">
+            <p style="text-align: center;">
                 Person A gave <b> {{TP_norm_decision.receiver }} point(s)</b> to Person B
                 and kept <b> {{TP_norm_decision.dictator_keeps }} point(s)</b> for themselves.
             </p>
 
-            <p>
+            <p style="text-align: center;">
                 <strong>How socially appropriate is it for {{treatment_text_action_person}} to
                 <b style="color: red;">{{ treatment_text_action }} points</b> {{ treatment_text_receiver }}?</strong>
             </p>
@@ -1198,7 +1201,7 @@
                 <b >AND</b>
             </p>
 
-            <p>
+            <p style="text-align: center;">
                 <strong>How socially appropriate is it for {{treatment_text_action_person}} to
                 <b style="color: red;"> <u>NOT</u> {{ treatment_text_action }} points</b> {{ treatment_text_receiver }}?</strong>
             </p>
@@ -1214,7 +1217,9 @@
                 </div>
             </div>
             {% endif %}
+        <br>
         <hr>
+        <br>
         <br>
         </div>
         {% endfor %}
@@ -1248,7 +1253,12 @@
         {% if "2PP" in player.treatment %}
 
             <p style="text-align: center; ">
-                <b style="color: red; ">You are Person B!</b>
+                <b style="color: red; ">You are Person B!</b> <br>
+
+                <b> Now, you decide as Person B how many points to <b style="color: red; ">remove from Person A</b>.</b> <br>
+
+                Below are three different possible decisions of Person A. <br> <br>
+
             </p>
 
         <br>
@@ -1259,19 +1269,32 @@
                 <b style="color: red;">You are Person C!</b>
             </p>
 
+            {% if "3PP" in player.treatment %}
+                <p style="text-align: center; ">
+                    <b> Now, you decide as Person C how many points to <b style="color: red; ">remove from Person A</b>.</b> <br>
+
+                </p>
+            {% endif %}
+
+            {% if "3PR" in player.treatment %}
+                <p style="text-align: center; ">
+                    <b> Now, you decide as Person C how many points to <b style="color: green; "> give to Person A</b>.</b> <br>
+                </p>
+            {% endif %}
+
             {% if "3PC" in player.treatment %}
-                <p style="font-size: 14px;"> Keep in mind that you can <u>either</u> <b>remove points</b> from <b>Person A <u>or</u> give points</b> to <b>Person B</b>. </p> <br>
+                <p style="text-align: center; ">
+                    <b> Now, you decide as Person C how many points to <b style="color: red; ">remove from Person A</b> <u>or</u> <b style="color: green; "> give to Person B</b>.</b> <br>
+                </p>
+
+                <p style="text-align: center;">
+                    Keep in mind that you can <u>either</u> <b>remove points</b> from <b>Person A <u>or</u> give points</b> to <b>Person B</b>.
+                </p> <br>
+
             {% endif %}
 
         {% endif %}
 
-        {% if "2PP" in player.treatment or "3PP" in player.treatment %}
-
-            <b> Now, you decide as Person B how many points to remove from Person A.</b> <br>
-
-            <p> Below are three different possible decisions of Person A. </p> <br>
-
-        {% endif %}
 
         {% for TP_decision in TP_decisions %}
         <div class='responsive-div'>
@@ -1366,19 +1389,19 @@
             </div>
 
                 {% if "IN" in player.treatment or "OUT" in player.treatment%}
-                    <p style="font-size: 14px;"> Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>. </p>
+                    <p style="text-align: center; "> Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>. </p>
                 {% endif %}
 
                 {% if "country" in player.treatment %}
-                    <p style="font-size: 14px;">
+                    <p style="text-align: center; ">
                         Person A lives in <b style="color: red; ">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red; ">{{ recip_identity_country }}</b>.
                     </p>
                 {% endif %}
 
-                <p style="font-size: 14px;"> Person A gave <b> {{TP_decision.receiver }} point(s)</b> to {{treatment_text_action_person2}} and kept <b> {{TP_decision.dictator_keeps }} point(s) </b> for themselves. </p>
+                <p style="text-align: center; "> Person A gave <b> {{TP_decision.receiver }} point(s)</b> to {{treatment_text_action_person2}} and kept <b> {{TP_decision.dictator_keeps }} point(s) </b> for themselves. </p>
 
                 <div class='numbers'>
-                    <p>  <strong>As {{treatment_text_action_person}}, how many points do you <b style="color: red;"> {{ treatment_text_action }} </b>  {{ treatment_text_receiver }}? </strong> </p>
+                    <p style="text-align: center; ">  <strong>As {{treatment_text_action_person}}, how many points do you <b style="color: red;"> {{ treatment_text_action }} {{ treatment_text_receiver }} </b> ? </strong> </p>
 
                     <div class="number-row" data-index="{{ TP_decision.index }}" data-row="punish" data-input="selected-number-{{ TP_decision.index }}">
                         {{ for num in TP_points }}
@@ -1389,10 +1412,10 @@
                     <br>
 
                     <p style="text-align: center; ">
-                        <b style="color: red; ">OR</b>
+                        <b>OR</b>
                     </p>
 
-                    <p> <strong>How many points do you <b style="color: red;"> {{ treatment_text_action_comp }} </b>  {{ treatment_text_receiver_comp }}? </strong> </p>
+                    <p style="text-align: center; "> <strong>How many points do you <b style="color: green;"> {{ treatment_text_action_comp }}  {{ treatment_text_receiver_comp }}</b> ? </strong> </p>
 
                     <div class="number-row-comp" data-index="{{ TP_decision.index }}" data-row="compensate" data-input="selected-number-{{ TP_decision.index }}">
                         {{ for num in TP_points }}
@@ -1403,11 +1426,13 @@
                 </div>
 
             <div data-index="{{ TP_decision.index }}">
-                <p style="font-size: 14px;"> This costs you <span class="TP-cost-display" data-index="{{ TP_decision.index }}"></span> point(s).
+                <p style="text-align: center; "> This costs you <span class="TP-cost-display" data-index="{{ TP_decision.index }}"></span> point(s).
                 </p>
             </div>
 
-            <hr>
+            <br>
+        <hr>
+        <br>
             <br>
         </div>
         {% endfor %}
