--- a/baseline_trials/UniversalNormPage.html
+++ b/baseline_trials/UniversalNormPage.html
@@ -275,6 +275,29 @@
         pointer-events: none; /* Disable interactions */
     }
 
+    .coin-count-labelD {
+        font-size: 1.2rem;
+        color: #333; /* Adjust color as needed */
+        position: absolute; /* Position relative to .container */
+        left: calc(50% - 4.2vw); /* Center horizontally before offsetting */
+        top: 23%; /* Move up; adjust value as needed */
+         /* transform: translateX(-50%);Adjust for exact centering */
+        text-align: center; /* Align text */
+    }
+
+    .coin:nth-child(12)  { top: 6.0vw; }
+    .coin:nth-child(11)  { top: 6.3vw; }
+    .coin:nth-child(10)  { top: 6.6vw; }
+    .coin:nth-child(9)   { top: 6.9vw; }
+    .coin:nth-child(8)   { top: 7.2vw; }
+    .coin:nth-child(7)   { top: 7.5vw; }
+    .coin:nth-child(6)   { top: 7.8vw; }
+    .coin:nth-child(5)   { top: 8.1vw; }
+    .coin:nth-child(4)   { top: 8.4vw; }
+    .coin:nth-child(3)   { top: 8.7vw; }
+    .coin:nth-child(2)   { top: 9.0vw; }
+    .coin:nth-child(1)   { top: 9.3vw; }
+
     .responsive-div {
       width: 90%; /* Default width */
       transform-origin: top left; /* Ensure scaling starts from top-left */
@@ -366,10 +389,9 @@
                 <b style="position: absolute; top: 60%; right:-27%;">PERSON B</b>
             </p>
 
-            <span class='coinstack coinstackD'"></span>
+            <span class='coinstack coinstackD'></span>
             <div class="coin-count-labelD" id="countD"
-                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment
-                 or 'universal' in player.treatment %}top: 55%;{% endif %}"></div>
+                 style="top: 55%;"></div>
 
             <span class='coinstack coinstackR'></span>
             <div class="coin-count-labelR" id="countR"
